--- a/style.css
+++ b/style.css
@@ -1,87 +1,52 @@
-body {
-        background-position: 100%;
-        background-color: rgb(43, 3, 3);
-        backdrop-filter: 100%;
-        margin-top: 10px;
-        margin-bottom: 10px;
-        margin-right: 10px;
-        margin-left: 10px;
-border-style: groove;
-        border-color: rgb(212, 184, 184);
-        border-radius: 20px;
-        border-width: 10px;
-
-        padding-top: 10px;
-        padding-bottom: 10px;
-        padding-left: 10%;
-        padding-right:10%;
-    
-    }
-h1 {content-visibility: auto;
-    color: #d8dbca;
-    font-size: 150%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    fill: rgb(32, 31, 29);
-    background-color: rgb(73, 30, 30);
-    border-radius: 100%;
+body{font-family: 'Orbitron', sans-serif;
+    background-image:url('https://media2.giphy.com/media/iicDrNGWxHmDrIni6j/giphy.gif?cid=ecf05e47pytyfp52fk0q3r33wh656k365pxwqfu8adikcgjh&rid=giphy.gif&ct=g');
+    background-size: cover;
+    color: white;
     text-align: center;
-    border-color: bisque;
-    border-style: groove;
+    font-size: larger;
 }
-h2 {content-visibility: visible;
-    color: rgb(250, 178, 214);
-    font-display: swap;
-    font-size: large;
-    border-color: rgba(250, 215, 222, 0.018);
-    border-bottom: 10px;
-    border-style: groove;
-}
-p {color: blanchedalmond;
-    font-weight: lighter;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: medium;
-
-}
-img {width: 250px;
-    height: 500px; ;
-    border-radius: 70%;
-    border-style: groove;
+.info{
+    color: red;
+    font-family: 'Orbitron', sans-serif;
+    border-bottom: 80px;
     border-color: antiquewhite;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
+    font-weight: bold;
+}
+.btn{font-family: 'Orbitron', sans-serif;
+    padding-top: 5px; padding-bottom: 5px; padding-right: auto; padding-left: auto;
 
 }
-input {color: rgb(122, 53, 4);
-
+.logo{
+    text-align: left;
+    width: 150px;
+    height: 150px;
+    padding: auto;
 }
-button{color: rgb(30, 39, 209);
-
-}
-ul{color: rgb(192, 134, 134);
-font-size: medium;
-font-display: fallback;
-font-feature-settings: "blws";
-font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-em{color: rgb(124, 72, 72);
-
-}
-input{
-    color: rgb(8, 8, 8);
-}
-.flex-container{
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     display: flex;
-    color: rgb(198, 162, 142);
-    margin-left: 10px;
-    margin-right: 10px;
-    border: rgb(222, 164, 142);
-    border-style: groove;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-inline-start: 10px;
-    flex-wrap: wrap; 
-    flex-direction: row;
-    justify-content: space-around;
+    
+}
+li a{
+    display: inline-start;
+    width: 60px;
+    padding: 8px 16px;
+    color: #87CEEB;
+
+}
+li a :hover{
+    background-color: red;
+    color: white;
+}
+.H1{
+    margin-top: 10px;
+}
+input{ display: inline;
+    list-style-type: none;
+    margin-top: 10px;
+    width: fit-content;
+
+
 }
